[gd_scene load_steps=6 format=3 uid="uid://cfyrweeauu8d4"]

[ext_resource type="PackedScene" uid="uid://cya8tdk3metyd" path="res://cone/cone.tscn" id="1_3wlmc"]
[ext_resource type="Script" path="res://game3/game_3.gd" id="1_uk20x"]
[ext_resource type="Texture2D" uid="uid://5l3hwinkfbuc" path="res://refresh.svg" id="3_ivy8a"]
[ext_resource type="Texture2D" uid="uid://bgrumoxkqgyyg" path="res://Undo-Transparent-Background.png" id="3_xguwq"]
[ext_resource type="Texture2D" uid="uid://dp12le5061li4" path="res://иконка совет.png" id="5_h4jpv"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_uk20x")

[node name="Cone" parent="." instance=ExtResource("1_3wlmc")]
position = Vector2(124, 447)

[node name="Cone2" parent="." instance=ExtResource("1_3wlmc")]
position = Vector2(237, 447)

[node name="Cone3" parent="." instance=ExtResource("1_3wlmc")]
position = Vector2(351, 447)

[node name="Cone4" parent="." instance=ExtResource("1_3wlmc")]
visible = false
position = Vector2(237, 680)

[node name="Label" type="Label" parent="."]
visible = false
offset_left = 133.0
offset_top = 272.0
offset_right = 344.0
offset_bottom = 314.0
theme_override_font_sizes/font_size = 30
text = "Вы победили!"

[node name="Button" type="Button" parent="."]
offset_left = 6.0
offset_top = 4.0
offset_right = 79.0
offset_bottom = 69.0
theme_override_font_sizes/font_size = 25

[node name="Sprite2D" type="Sprite2D" parent="Button"]
position = Vector2(33.5, 34)
scale = Vector2(0.0642857, 0.0608696)
texture = ExtResource("3_xguwq")

[node name="Button2" type="Button" parent="."]
offset_left = 373.0
offset_top = 3.0
offset_right = 448.0
offset_bottom = 69.0

[node name="Sprite2D" type="Sprite2D" parent="Button2"]
position = Vector2(37.5, 33)
scale = Vector2(0.09375, 0.085)
texture = ExtResource("3_ivy8a")

[node name="Button3" type="Button" parent="."]
offset_left = 381.0
offset_top = 735.0
offset_right = 438.0
offset_bottom = 790.0

[node name="Sprite2D" type="Sprite2D" parent="Button3"]
position = Vector2(28, 26)
scale = Vector2(0.0787879, 0.0721428)
texture = ExtResource("5_h4jpv")

[node name="ButtonMix" type="Button" parent="."]
visible = false
offset_left = 141.0
offset_top = 442.0
offset_right = 344.0
offset_bottom = 492.0
theme_override_font_sizes/font_size = 30
text = "Перемешать"

[connection signal="on_click" from="Cone" to="." method="_on_cone_on_click"]
[connection signal="on_click" from="Cone2" to="." method="_on_cone_on_click"]
[connection signal="on_click" from="Cone3" to="." method="_on_cone_on_click"]
[connection signal="on_click" from="Cone4" to="." method="_on_cone_on_click"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="ButtonMix" to="." method="_on_button_mix_pressed"]
